# ChangeLog for www-apps/gallery
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/gallery/ChangeLog,v 1.113 2007/05/26 23:47:08 rl03 Exp $

  26 May 2007; Renat Lumpau <rl03@gentoo.org> gallery-2.2.1.ebuild:
  Fix bug #174534

*gallery-2.2.1 (26 May 2007)

  26 May 2007; Renat Lumpau <rl03@gentoo.org> -gallery-2.2.ebuild,
  +gallery-2.2.1.ebuild:
  Version bump, bug #175325

  12 May 2007; Luca Longinotti <chtekk@gentoo.org> gallery-1.5.3.ebuild,
  gallery-1.5.5.ebuild:
  Apache 1.X masking (fix ebuilds to not require apache-1*).

*gallery-2.2 (17 Mar 2007)

  17 Mar 2007; Renat Lumpau <rl03@gentoo.org> +gallery-2.2.ebuild:
  Version bump

  02 Jan 2007; Renat Lumpau <rl03@gentoo.org> gallery-2.1.2.ebuild:
  Remove db deps wrt bug #159781

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> gallery-2.1.2.ebuild:
  dev-db/mysql => virtual/mysql

*gallery-1.5.5 (14 Nov 2006)

  14 Nov 2006; Renat Lumpau <rl03@gentoo.org> -gallery-1.5.4.ebuild,
  +gallery-1.5.5.ebuild:
  Version bump

  20 Oct 2006; Renat Lumpau <rl03@gentoo.org> gallery-2.1.2.ebuild:
  Add missing need_php, bug #150958.

  24 Aug 2006; Renat Lumpau <rl03@gentoo.org>
  -files/FfmpegToolkit.class.patch, -gallery-2.0.2-r1.ebuild,
  -gallery-2.0.4.ebuild:
  Removed old versions

  23 Aug 2006; Rene Nussbaumer <killerfox@gentoo.org> gallery-2.1.2.ebuild:
  Stable on hppa. See bug #144379.

  22 Aug 2006; Markus Rothe <corsair@gentoo.org> gallery-2.1.2.ebuild:
  Stable on ppc64; bug #144379

  22 Aug 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gallery-2.1.2.ebuild:
  ppc stable, bug #144379

  22 Aug 2006; Thomas Cort <tcort@gentoo.org> gallery-2.1.2.ebuild:
  Stable on amd64 wrt security Bug #144379.

  22 Aug 2006; Joshua Jackson <tsunam@gentoo.org> gallery-2.1.2.ebuild:
  Stable x86; bug #144379

  22 Aug 2006; Thomas Cort <tcort@gentoo.org> gallery-2.1.2.ebuild:
  Stable on alpha wrt Bug #144379.
